hphp/test/zend/bad/tests/security/open_basedir_filetype.php
<?php
require_once "open_basedir.inc";
test_open_basedir("filetype");
?>
<?php
require_once "open_basedir.inc";
delete_directories();
?>